--- a/.env
+++ b/.env
@@ -3,3 +3,5 @@ POSTGRES_PASSWORD=oh_hi_mark
 KR_DB_USER=kino
 KR_DB_PASSWORD=antman_and_thanos
 KR_DB_DATABASE=kino
+FLASK_APP=app.py
+FLASK_DEBUG=1
