--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -2,6 +2,7 @@ astroid==2.2.5
 autopep8==1.4.4
 Click==7.0
 Flask==1.0.2
+Flask-Cors==3.0.7
 Flask-Jsonpify==1.5.0
 isort==4.3.20
 itsdangerous==1.1.0
