--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -13,6 +13,7 @@ mccabe==0.6.1
 psycopg2-binary==2.8.2
 pycodestyle==2.5.0
 pylint==2.3.1
+python-dotenv==0.10.2
 six==1.12.0
 typed-ast==1.3.5
 Werkzeug==0.15.4
