--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,9 +1,13 @@
 astroid==2.2.5
 autopep8==1.4.4
+bcrypt==3.1.6
+cffi==1.12.3
 Click==7.0
 Flask==1.0.2
+Flask-Bcrypt==0.7.1
 Flask-Cors==3.0.7
 Flask-Jsonpify==1.5.0
+Flask-JWT-Extended==3.18.2
 isort==4.3.20
 itsdangerous==1.1.0
 Jinja2==2.10.1
@@ -12,6 +16,8 @@ MarkupSafe==1.1.1
 mccabe==0.6.1
 psycopg2-binary==2.8.2
 pycodestyle==2.5.0
+pycparser==2.19
+PyJWT==1.7.1
 pylint==2.3.1
 python-dotenv==0.10.2
 six==1.12.0
